feat(primitives): remove follows window exclusions
